--- a/css/main.css
+++ b/css/main.css
@@ -1,147 +1,175 @@
 .main {
-    max-width: 640px;
-    border-radius: 320px;
-    padding: 0 20px 70px;
-    margin: 0 auto;
-    background-color: #fff;
-    box-shadow: 0 0 8px 0 rgb(34 34 34 / 20%), 0 0 20px 0 rgb(34 34 34 / 20%);
-    outline: 2px dashed #fff;
+  max-width: 640px;
+  border-radius: 320px;
+  padding: 0 20px 70px;
+  margin: 0 auto;
+  background-color: #fff;
+  box-shadow: 0 0 8px 0 rgb(34 34 34 / 20%), 0 0 20px 0 rgb(34 34 34 / 20%);
+  outline: 2px dashed #fff;
 }
 
 .main__section {
-    padding-top: 20px;
-    padding-bottom: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .main__section--prime {
-    padding-top: 20px;
+  position: relative;
+  padding-top: 20px;
 }
 
 .main__subtext {
-    font-weight: normal;
-    opacity: 0.75;
+  font-weight: normal;
+  opacity: 0.75;
 }
 
 .main__section--expand {
-    overflow-x: auto;
-    margin: 0 -20px;
+  overflow-x: auto;
+  margin: 0 -20px;
 }
 
 .main__section--prime .main__image {
-    display: block;
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
+  display: block;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  cursor: pointer;
 }
 
 .main__paragraph {
-    padding-top: 20px;
-    padding-bottom: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .main__link {
-    color: #ff6f88;
-    text-decoration: none;
-    font-weight: bold;
+  color: #ff6f88;
+  text-decoration: none;
+  font-weight: bold;
 }
 
 .main__link:hover {
-    color: #ff0000;
-    text-decoration: underline;
+  color: #ff0000;
+  text-decoration: underline;
 }
 
 .main__table {
-    border-collapse: collapse;
-    width: 100%;
+  border-collapse: collapse;
+  width: 100%;
 }
 
 .main__table-caption {
-    caption-side: bottom;
-    text-align: center;
-    padding: 10px 20px;
-    font-weight: bold;
+  caption-side: bottom;
+  text-align: center;
+  padding: 10px 20px;
+  font-weight: bold;
 }
 
 .main__table-cell {
-    border: 1px solid #888;
-    padding: 10px 5px;
-    text-align: center;
-    vertical-align: middle;
+  border: 1px solid #888;
+  padding: 10px 5px;
+  text-align: center;
+  vertical-align: middle;
 }
 
 .main__table-header {
-    background-color: #222;
-    color: #ddd;
-    font-weight: normal;
+  background-color: #222;
+  color: #ddd;
+  font-weight: normal;
 }
 
 .main__table-row:nth-child(even) {
-    background-color: #f0f0f0;
+  background-color: #f0f0f0;
 }
 
 .main__table-row:nth-child(odd) {
-    background-color: #fff;
+  background-color: #fff;
 }
 
 .main__table-row:hover {
-    background-color: #fffff0;
+  background-color: #fffff0;
 }
 
 .main__button {
-    width: 90px;
-    height: 90px;
-    border-radius: 50%;
-    border: 0;
-    outline: 2px dashed #bbb;
-    cursor: pointer;
-    background-color: #222;
-    color: #ddd;
-    margin: 40px auto 0;
-    display: block;
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    text-transform: uppercase;
-    font-weight: bold;
+  width: 90px;
+  height: 90px;
+  border-radius: 50%;
+  border: 0;
+  outline: 2px dashed #bbb;
+  cursor: pointer;
+  background-color: #222;
+  color: #ddd;
+  margin: 40px auto 0;
+  display: block;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  text-transform: uppercase;
+  font-weight: bold;
 }
 
 .main__button:hover {
-    background-color: #fff;
-    color: #222;
+  background-color: #fff;
+  color: #222;
+}
+
+.main__arrow {
+  opacity: 0;
+  position: absolute;
+  top: calc(50% - 15px);
+  display: block;
+  font-size: 30px;
+  color: #fff;
+  transition: opacity .2s;
+  cursor: pointer;
+}
+
+.main__arrow--left {
+  left: 15px;
+}
+
+.main__arrow--right {
+  right: 15px;
+}
+
+.main__section--prime:hover .main__arrow {
+  opacity: 1;
 }
 
 .js-dark-theme {
-    color: #ddd;
-    background-color: #666;
+  color: #ddd;
+  background-color: #666;
 }
 
 .js-dark-theme .main {
-    background-color: #222;
-    outline: 2px dashed #222;
+  background-color: #222;
+  outline: 2px dashed #222;
 }
 
 .js-dark-theme .main__table-header {
-    background-color: #f0f0f0;
-    color: #222;
+  background-color: #f0f0f0;
+  color: #222;
 }
 
 .js-dark-theme .main__table-row:nth-child(even) {
-    background-color: #444;
+  background-color: #444;
 }
 
 .js-dark-theme .main__table-row:nth-child(odd) {
-    background-color: #222;
+  background-color: #222;
 }
 
 .js-dark-theme .main__table-row:hover {
-    background-color: #343427;
+  background-color: #343427;
 }
 
 .js-dark-theme .main__button {
-    background-color: #f0f0f0;
-    color: #222;
+  background-color: #f0f0f0;
+  color: #222;
 }
 
 .js-dark-theme .main__button:hover {
-    background-color: #222;
-    color: #f0f0f0;
+  background-color: #222;
+  color: #f0f0f0;
+}
+.js-dark-theme .main__arrow {
+  color: #222;
 }
